Added limiting to map configuration service
